fix vh on iphone

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -86,6 +86,7 @@ h2 {
 .bid-modal {
 	z-index: 1;
 	position: fixed;
+	min-height: 100vh;
 	height: -webkit-fill-available;
 	margin: 5% 0 15% 0 ;
 	width: 90vw;
@@ -105,7 +106,7 @@ h2 {
 	position: fixed;
 	top: 0;
 	left: 0;
-	height: -webkit-fill-available;
+	height: 100vh;
 	width: 100vw;
 	background-color: rgba(128,128,128,0.5);
 	padding: 0;
